// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Table /> create table component 1`] = `
<table
  className="fd-table"
>
  <thead
    className="fd-table__header"
  >
    <tr
      className="fd-table__row"
    >
      <th
        className="fd-table__cell"
      >
        Column Header 1
      </th>
      <th
        className="fd-table__cell"
      >
        Column Header 2
      </th>
      <th
        className="fd-table__cell"
      >
        Column Header 3
      </th>
      <th
        className="fd-table__cell"
      >
        Column Header 4
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      className="fd-table__row"
    >
      <td
        className="fd-table__cell"
      >
        Data 1
      </td>
      <td
        className="fd-table__cell"
      >
        Data 2
      </td>
      <td
        className="fd-table__cell"
      >
        Data 3
      </td>
      <td
        className="fd-table__cell"
      >
        Data 4
      </td>
    </tr>
    <tr
      className="fd-table__row"
    >
      <td
        className="fd-table__cell"
      >
        Data 5
      </td>
      <td
        className="fd-table__cell"
      >
        Data 6
      </td>
      <td
        className="fd-table__cell"
      >
        Data 7
      </td>
      <td
        className="fd-table__cell"
      >
        Data 8
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<Table /> create table component 2`] = `
<table
  className="fd-table blue"
>
  <thead
    className="fd-table__header"
  >
    <tr
      className="fd-table__row"
    >
      <th
        className="fd-table__cell"
      >
        Column Header 1
      </th>
      <th
        className="fd-table__cell"
      >
        Column Header 2
      </th>
      <th
        className="fd-table__cell"
      >
        Column Header 3
      </th>
      <th
        className="fd-table__cell"
      >
        Column Header 4
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      className="fd-table__row"
    >
      <td
        className="fd-table__cell"
      >
        Data 1
      </td>
      <td
        className="fd-table__cell"
      >
        Data 2
      </td>
      <td
        className="fd-table__cell"
      >
        Data 3
      </td>
      <td
        className="fd-table__cell"
      >
        Data 4
      </td>
    </tr>
    <tr
      className="fd-table__row"
    >
      <td
        className="fd-table__cell"
      >
        Data 5
      </td>
      <td
        className="fd-table__cell"
      >
        Data 6
      </td>
      <td
        className="fd-table__cell"
      >
        Data 7
      </td>
      <td
        className="fd-table__cell"
      >
        Data 8
      </td>
    </tr>
  </tbody>
</table>
`;
